--- a/algorithm/dfs_bfs_backtrack/搜索.md
+++ b/algorithm/dfs_bfs_backtrack/搜索.md
@@ -156,28 +156,33 @@ class Solution {
 public:
     int numSquares(int n) {
         queue<int> q;
+        set<int> s;
+        for(int i=1;i*i<=n;i++)
+            s.insert(i*i);
         int level = 0;
-        for(int i=sqrt(n);i>0;i--)
-        {
-            q.push(n-i*i);
-        }
+        q.push(n);
         while(!q.empty())
         {
             level++;
-            int qsize=q.size();
-            while(qsize-->0)
+            queue<int> nextq;
+            while(!q.empty())
             {
-                int currentn=q.front();
+                int remainder = q.front();
                 q.pop();
-                if(currentn==0)
-                    return level;
-                for(int i=sqrt(currentn);i>0;i--)
-                    q.push(currentn-i*i);
+                for(const int &squaren : s) // titerate over set 
+                {
+                    if(remainder==squaren)
+                        return level;
+                    else if(remainder < squaren)
+                        break;
+                    else
+                        nextq.push(remainder-squaren);
+                }
             }
+            q=nextq;
         }
         return level;
     }
 };
 ```
 
-超时了，不知道为什么。。。
