--- a/algorithm/dfs_bfs_backtrack/搜索.md
+++ b/algorithm/dfs_bfs_backtrack/搜索.md
@@ -186,3 +186,244 @@ public:
 };
 ```
 
+### 3. [127 word ladder](https://leetcode.com/problems/word-ladder/)
+
+- 题目描述：找出一条从 beginWord 到 endWord 的最短路径，每次移动规定为改变一个字符，并且改变之后的字符串必须在 wordList 中。
+
+  ```
+  Input: beginWord = "hit", endWord = "cog", wordList = ["hot","dot","dog","lot","log","cog"]
+  Output: 5
+  Explanation: One shortest transformation sequence is "hit" -> "hot" -> "dot" -> "dog" -> cog", which is 5 words long.
+  
+  ```
+
+![img](http://zxi.mytechroad.com/blog/wp-content/uploads/2017/09/127-ep71-3.png)
+
+BFS： 这里第n层即为与beginWord有n个字符不一样的word，所以不同层之间不会混，用一个hashset 来表示还没有visit的。这样在寻找一个char不同的单词的时候不会回到上一层。
+
+时间复杂度: O(n*26^l) ; n为wordlist中word个数，l为长度
+
+​        unordered_set<string> dict(wordList.begin(),wordList.end()); //从vector构建set 这样构建
+
+​        int l=beginWord.length(); **//string 用 length 不是 size**
+
+```c++
+
+class Solution {
+public:
+    int ladderLength(string beginWord, string endWord, vector<string>& wordList) {
+        unordered_set<string> dict(wordList.begin(),wordList.end()); //从vector构建set 这样构建
+        if(dict.count(endWord)==0) return 0;
+        queue<string> q;
+        q.push(beginWord);
+        int step = 1;
+        int l=beginWord.length(); //string 用 length 不是 size
+        while(!q.empty())
+        {
+            step++;
+            for(int size = q.size();size>0;size--){
+                string w=q.front();
+                q.pop();
+                for(int i=0;i<l;i++)
+                {
+                    char ch=w[i];
+                    for(int j='a';j<='z';j++)
+                    {
+                        w[i]=j;
+                        if(w==endWord)
+                            return step;
+                        if(dict.count(w)==0)
+                            continue;
+                        dict.erase(w);
+                        q.push(w);
+                    }
+                    w[i]=ch;
+                }
+            }
+        }
+        return 0;
+    }
+};
+```
+
+Bidirectional BFS
+
+
+
+
+
+
+
+## DFS
+
+```
+DFS(startV)
+{
+	push startV to stack;
+    while(stack is not empty)
+    {
+    	currentV=Pop stack;
+    	if currentV is not in VisitedSet
+    	{
+    		add currentV to visitedSet;
+    		"visit" currentV
+    		for each adjacent adjV of currentV
+    		{
+    			push adjV to stack;
+    		}
+    	}
+    }
+}
+```
+
+
+
+### 1. [695 Max area of Island](https://leetcode.com/problems/max-area-of-island/)
+
+找到四向连通的全为1的最大cluster 面积
+
+这个要用DFS； 每次DFS 把一片island设为.，返回面积
+
+时间复杂度：O（mn）, m为行数，n为列数
+
+空间复杂度：O（mn）,有一个stack来存储
+
+```c++
+class Solution {
+public:
+    int maxAreaOfIsland(vector<vector<int>>& grid) {
+        int maxArea = 0;
+        for(int i=0;i<grid.size();i++)
+            for(int j=0;j<grid[0].size();j++)
+            {
+                if(grid[i][j])
+                    maxArea=max(maxArea,dfs(grid,i,j));
+            }
+        return maxArea;
+    }
+    int dfs(vector<vector<int>>& grid, int i,int j)
+    {
+        stack<pair<int,int>> s;
+        s.push({i,j});
+        grid[i][j]=0;
+        int area=0;
+        while(!s.empty())
+        {
+            area++;
+            int i=s.top().first;
+            int j=s.top().second;
+            s.pop();
+            if(isValid(grid,i,j-1))
+            {
+                grid[i][j-1]=0;
+                s.push({i,j-1});
+            }
+             if(isValid(grid,i,j+1))
+            {
+                grid[i][j+1]=0;
+                s.push({i,j+1});
+            }
+            if(isValid(grid,i-1,j))
+            {
+                grid[i-1][j]=0;
+                s.push({i-1,j});
+            }
+            if(isValid(grid,i+1,j))
+            {
+                grid[i+1][j]=0;
+                s.push({i+1,j});
+            }
+        }
+        return area;
+    }
+    bool isValid(vector<vector<int>>& grid, int i, int j)
+    {
+        if(i<0||i>=grid.size()||j<0||j>=grid[0].size()||grid[i][j]==0)
+            return false;
+        else
+            return true;
+    }
+};
+```
+
+### 2. [200 Number of Islands](https://leetcode.com/problems/number-of-islands/description/)
+
+问题描述： 全是0 1 的mxn矩阵，返回岛屿（四向连通）的个数；边是被水环绕的
+
+明显的DFS，套模板
+
+时间复杂度：O（mn）,每个element最多visit一次
+
+空间复杂度：O（mn）,worst case O(MN)*O*(*M*×*N*) in case that the grid map is filled with lands where DFS goes by M*×*N deep.
+
+```c++
+class Solution {
+private:
+    void dfs(vector<vector<char>>& grid,int i, int j)
+    {
+        int h=grid.size();
+        int w=grid[0].size();
+        grid[i][j]='0';
+        if(i-1>=0 && grid[i-1][j]=='1') dfs(grid,i-1,j);
+        if(i+1<h && grid[i+1][j]=='1') dfs(grid,i+1,j);
+        if(j-1>=0 && grid[i][j-1]=='1') dfs(grid,i,j-1);
+        if(j+1<w && grid[i][j+1]=='1') dfs(grid,i,j+1);
+
+    }
+public:
+    int numIslands(vector<vector<char>>& grid) {
+        int nid=0;
+        for(int i=0;i<grid.size();i++)
+            for(int j=0;j<grid[0].size();j++)
+            {
+                if(grid[i][j]=='1')
+                {
+                    nid++;
+                    dfs(grid,i,j);
+                }
+            }
+        return nid;
+    }
+};
+```
+
+### 3. [547. Number of Provinces](https://leetcode.com/problems/number-of-provinces/)
+
+给定一个矩阵isconnected， element （i,j）表示city i和city j是否连通。求连通的province 的个数
+
+明显DFS，和上一题很类似。（bfs也可以做）
+
+时间：O(n^2), 整个矩阵都会被check一遍
+
+空间：O(n)
+
+```c++
+class Solution {
+public:
+    void dfs(vector<vector<int>>& isConnected, vector<bool> &visited, int i)
+    {
+     visited[i]=true;
+        for(int j=0;j<isConnected.size();j++)
+        {
+            if(isConnected[i][j] && !visited[j])
+            {
+                dfs(isConnected,visited,j);
+            }
+        }
+    }
+    int findCircleNum(vector<vector<int>>& isConnected) {
+        int n=0;
+        vector<bool> visited(isConnected.size(),false);
+        for(int i=0;i<isConnected.size();i++)
+        {
+            if(!visited[i])
+            {
+                dfs(isConnected,visited,i);
+                n++;
+            }       
+        }
+        return n;
+    }
+};
+```
+
