--- a/刷题日记.md
+++ b/刷题日记.md
@@ -6,23 +6,22 @@ Target Company:
 
 ### 科技公司（Machine Learning， AR/VR）
 
-1. Meta (SWE PhD intern, metauniverse, AR/VR/Machine Learning相关)， 邓颢云，金希尧，杨春晖拿到了这个intern。每个intern可以内推一个直接到recruiter会给面试，邓会给我内推
+1. Meta (SWE PhD intern, metauniverse, AR/VR/Machine Learning相关)，
 2. Occulus (facebook 中做VR/AR的，不知道是不是分开招聘)
-3. Nvidia: （GPU加速，ML相关算法支持）翟彦钦会去实习，cudnn，
-4. Google, 可以找jon和李默涵内推
-5. Linkedin，Machine Learning ， 推荐系统，周靖博， MLE
-6. Amazon. SWE，云计算，YYZ在里面
-
+3. Nvidia: （GPU加速，ML相关算法支持）
+4. Google,
+5. Linkedin，Machine Learning ， 推荐系统， MLE
+6. Amazon. SWE，云计算
 ### 自动驾驶
 
-1. Tesla， 周龙在
-2. Pony.ai，李科师兄
+1. Tesla， 
+2. Pony.ai，
 
 ### 医疗影像公司
 
 1. 西门子，传统医学影像公司，职位较少，甚至在裁员，但是我们组跟他们有合作
-2. 休斯顿联影，实习岗位较少，可以问suranjana
-3. 芝加哥佳能，传统医学影像公司，Liang Cai师兄在里面做Manager
+2. 休斯顿联影，实习岗位较少，
+3. 芝加哥佳能，传统医学影像公司，
 4. Philip，GE信息较少
 
 ### 广大互联网公司
