--- a/algorithm/dfs_bfs_backtrack/搜索.md
+++ b/algorithm/dfs_bfs_backtrack/搜索.md
@@ -427,3 +427,135 @@ public:
 };
 ```
 
+### 4. [130. Surrounded Regions](https://leetcode.com/problems/surrounded-regions/)
+
+题目描述：
+
+先把边上的‘O’ 换成第三种char， 比如‘T’；
+
+```
+For example,
+X X X X
+X O O X
+X X O X
+X O X X
+
+After running your function, the board should be:
+X X X X
+X X X X
+X X X X
+X O X X
+```
+
+(dfs)
+
+然后遍历，T->O, O->X
+
+时间复杂度：O（N） N is the number of cells in matrix
+
+空间复杂度：O（N)
+
+```c++
+class Solution {
+public:
+    void solve(vector<vector<char>>& board) {
+        for(int i=0;i<board.size();i++)
+        {
+            if(board[i][0]=='O') dfs(board,i,0);
+            if(board[i][board[0].size()-1]=='O') dfs(board,i,board[0].size()-1);
+        }
+       for(int j=0;j<board[0].size();j++)
+        {
+            if(board[0][j]=='O') dfs(board,0,j);
+            if(board[board.size()-1][j]=='O') dfs(board,board.size()-1,j);
+        }
+        for(int i=0;i<board.size();i++)
+            for(int j=0;j<board[0].size();j++)
+            {
+                if(board[i][j]=='T') board[i][j]='O';
+                else if(board[i][j]=='O') board[i][j]='X';
+            }
+            
+    }
+    void dfs(vector<vector<char>>& board, int i, int j)
+    {
+        board[i][j]='T';
+        if(i-1>=0 && board[i-1][j]=='O') dfs(board,i-1,j);
+        if(j-1>=0 && board[i][j-1]=='O') dfs(board,i,j-1);
+        if(i+1<board.size() && board[i+1][j]=='O') dfs(board,i+1,j);
+        if(j+1<board[0].size() && board[i][j+1]=='O') dfs(board,i,j+1);
+        return;
+    }
+};
+```
+
+### 5. 417. Pacific Atlantic Water Flow (Medium)
+
+[Leetcode](https://leetcode.com/problems/pacific-atlantic-water-flow/description/) / [力扣](https://leetcode-cn.com/problems/pacific-atlantic-water-flow/description/)
+
+```
+Given the following 5x5 matrix:
+
+  Pacific ~   ~   ~   ~   ~
+       ~  1   2   2   3  (5) *
+       ~  3   2   3  (4) (4) *
+       ~  2   4  (5)  3   1  *
+       ~ (6) (7)  1   4   5  *
+       ~ (5)  1   1   2   4  *
+          *   *   *   *   * Atlantic
+
+Return:
+[[0, 4], [1, 3], [1, 4], [2, 2], [3, 0], [3, 1], [4, 0]] (positions with parentheses in above matrix).
+```
+
+
+
+左边和上边是太平洋，右边和下边是大西洋，内部的数字代表海拔，海拔高的地方的水能够流到低的地方，求解水能够流到太平洋和大西洋的所有位置。
+
+***这个是要求既要到达太平洋又要到达大西洋，然后是可以用2个Bool矩阵表示```can reach P``` 和 ```can reach A```, 最后取交集 **
+
+时间复杂度： O（MN）
+
+空间复杂度：O（MN） （res占用空间）
+
+```c++
+class Solution {
+public:
+    vector<vector<int>> pacificAtlantic(vector<vector<int>>& heights) {
+        int ii=heights.size();
+        int jj=heights[0].size();
+        vector<vector<int>> res;
+        vector<vector<bool>> canReachP(heights.size(),vector<bool>(heights[0].size(),false));
+        vector<vector<bool>> canReachA(heights.size(),vector<bool>(heights[0].size(),false));
+        for(int i=0;i<ii;i++)
+        {
+            dfs(heights,canReachP,i,0);
+            dfs(heights,canReachA,i,jj-1);
+        }
+        for(int j=0;j<jj;j++)
+        {
+            dfs(heights,canReachP,0,j);
+            dfs(heights,canReachA,ii-1,j);
+        }
+        for(int i=0;i<ii;i++)
+              for(int j=0;j<jj;j++){
+                  if(canReachA[i][j]&&canReachP[i][j])
+                      res.push_back({i,j});
+              }
+        return res;
+    }
+    void dfs(vector<vector<int>>& heights,vector<vector<bool>>& canReach,int i, int j)
+    {
+        canReach[i][j]=true;
+        if(i-1>=0 && heights[i-1][j]>=heights[i][j]&&!canReach[i-1][j])
+            dfs(heights,canReach,i-1,j);
+         if(j-1>=0 && heights[i][j-1]>=heights[i][j]&&!canReach[i][j-1])
+            dfs(heights,canReach,i,j-1);
+         if(i+1<heights.size() && heights[i+1][j]>=heights[i][j]&&!canReach[i+1][j])
+            dfs(heights,canReach,i+1,j);
+         if(j+1 < heights[0].size() && heights[i][j+1]>=heights[i][j]&&!canReach[i][j+1])
+            dfs(heights,canReach,i,j+1);
+    }
+};
+```
+
