--- a/algorithm/二分查找.md
+++ b/algorithm/二分查找.md
@@ -1,8 +1,23 @@
 # 二分查找
 
+1. 首先确定更新区间时的条件，如果mid是可能取得值，需要保留，那么right=mid；这种情况下循环条件为while(left<mid), 为左闭右开区间；这样right的初始值选为nums.size().
+2. 如果是right=mid-1, 那么循环条件为while(left<=mid), right 初始值为nums.size()-1
+
+
+
+
+
+
+
 写二分法经常写乱，主要是因为**对区间的定义没有想清楚，区间的定义就是不变量**。要在二分查找的过程中，保持不变量，就是在while寻找中每一次边界的处理都要坚持根据区间的定义来操作，这就是**循环不变量**规则。
 
 写二分法，区间的定义一般为两种，左闭右闭即[left, right]，或者左闭右开即[left, right)。
+
+很多时候要根据更新条件判断循环条件
+
+首先根据是否要保留right判断是right=mid ; 还是right=mid-1
+
+然后确定循环条件（right=mid-1 的话 left<=right）otherwise（left<right)
 
 1. 第一种写法，我们定义 target 是在一个在左闭右闭的区间里，**也就是[left, right] （这个很重要非常重要）**。区间的定义这就决定了二分法的代码应该如何写，**因为定义target在[left, right]区间，所以有如下两点：**
    - while (left <= right) 要使用 <= ，因为left == right是有意义的，所以使用 <=
@@ -225,6 +240,141 @@ public:
         }
         
     return nums[left];
+    }
+};
+```
+
+## 4. 278 第一个错误的版本 First Bad Version (Easy)
+
+[Leetcode](https://leetcode.com/problems/first-bad-version/description/) / [力扣](https://leetcode-cn.com/problems/first-bad-version/description/)
+
+题目描述：给定一个元素 n 代表有 [1, 2, ..., n] 版本，在第 x 位置开始出现错误版本，导致后面的版本都错误。可以调用 isBadVersion(int x) 知道某个版本是否错误，要求找到第一个错误的版本。
+
+如果第 m 个版本出错，则表示第一个错误的版本在 **[l, m]** 之间，令 h = m；否则第一个错误的版本在 [m + 1, h] 之间，令 l = m + 1。
+
+因为 h 的赋值表达式为 h = m （左闭右闭），因此为方法一，循环条件为 l < h。
+
+```c++
+
+class Solution {
+public:
+    int firstBadVersion(int n) {
+        int left=1;
+        int right=n;
+        int mid;
+        while(left<right)
+        {
+            mid=left+(right-left)/2;
+            if(isBadVersion(mid))
+                right=mid;
+            else
+                left=mid+1;
+        }
+        return left;
+        
+    }
+};
+```
+
+## 5. 153 旋转数组的最小数字 Find Minimum in Rotated Sorted Array (Medium)
+
+[Leetcode](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/) / [力扣](https://leetcode-cn.com/problems/find-minimum-in-rotated-sorted-array/description/)
+
+```
+Input: [3,4,5,1,2],
+Output: 1
+```
+
+更新条件:
+
+```
+if(nums[mid]<nums[right]) //mid 可能是结果，保留
+	right=mid;
+else
+	left=mid-1;
+```
+
+因为这里是right=mid，所以用while(left<right)
+
+```c++
+class Solution {
+public:
+    int findMin(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size()-1;
+        int mid;
+        while(left<right)
+        {
+            mid=left+(right-left)/2;
+            if(nums[mid]<nums[right])
+                right=mid;
+            else
+                left=mid+1;
+        }
+        return nums[left];
+    }
+};
+```
+
+## 6.34查找区间 Find First and Last Position of Element in Sorted Array
+
+[Leetcode](https://leetcode.com/problems/find-first-and-last-position-of-element-in-sorted-array/) / [力扣](https://leetcode-cn.com/problems/find-first-and-last-position-of-element-in-sorted-array/)
+
+```
+Input: nums = [5,7,7,8,8,10], target = 8
+Output: [3,4]
+
+Input: nums = [5,7,7,8,8,10], target = 6
+Output: [-1,-1]
+```
+
+这道题是有好几个坑的
+
+- 首先我们写一个helper function findFirst(nums, target)，**返回大于等于target的数第一次出现的位置**；
+
+- 注意这里在缩小区间时，如果nums[mid]==target, 是要移动right到mid的，所以判断条件是 
+
+```c++
+            if(nums[mid]>=target)
+                right=mid;
+            else
+                left=mid-1;
+```
+
+- 这样是左闭右开的，所以条件是while(left<mid)；因为是右开的，**h取nums.size()**
+- 注意最后判断是否返回(-1,-1)要考虑：
+  - target是否大于最大的值（start=nums.size())
+  - target是否小于最小的值或者target不存在（nums[start]!=target)
+  - nums的size为0
+
+```c++
+
+class Solution {
+public:
+    vector<int> searchRange(vector<int>& nums, int target) {
+        int start=findFirst(nums,target);
+        int end=findFirst(nums,target+1)-1;
+        
+        if(nums.size()==0|| start==nums.size()||nums[start]!=target)
+            return vector<int>{-1,-1};
+        else
+            return vector<int>{start,max(start,end)};
+    }
+    //寻找大于等于target的数第一次出现的位置
+    int findFirst(vector<int>& nums, int target)
+    {
+        int left=0;
+        int right=nums.size(); //注意初始值
+        int mid;
+        while(left<right)
+        {
+            mid=left+(right-left)/2;
+            if(nums[mid]>=target)
+                right=mid;
+            else
+                left=mid-1;
+        }
+        return left;
     }
 };
 ```
